--- a/package.yaml
+++ b/package.yaml
@@ -39,7 +39,7 @@ library:
   source-dirs: src
 
 executables:
-  chess:
+  chessboard:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
