--- a/package.yaml
+++ b/package.yaml
@@ -21,7 +21,7 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
-- gloss
+- gloss >= 1.7.7.1
 - array2d
 
 ghc-options:
